--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <main>
-    </main>
+        <div id="Ejemplo">
+        </div>
+        <div id="array">
+        </div>
     <script src="Index.js"></script>
 </body>
 </html>
