--- a/Index.html
+++ b/Index.html
@@ -4,14 +4,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Proyecto Javascript</title>
 </head>
 <body>
-    <main>
-        <div id="Ejemplo">
+    <main class="container mt-5 mb-5">
+        <h1 class="text-center">Registro de Productos</h1>
+        <form class="row g-3" id="formulario">
+            <div class="col-md-6">
+                <label for="inputNombre" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="inputNombre">
+            </div>
+            <div class="col-md-6">
+                <label for="inputValor" class="form-label">Valor</label>
+                <input type="number" class="form-control" id="inputValor">
+            </div>
+            <div class="col-md-6 offset-md-3">
+                <label for="inputTipo" class="form-label">Tipo</label>
+                <select id="inputTipo" class="form-select">
+                    <option>
+                        Montura
+                    </option>
+                    <option>
+                        Mascota
+                    </option>
+                    <option>
+                        Servicio
+                    </option>
+                </select>
+            </div>
+            <div class="col-12 text-center">
+                <button type="submit" class="btn btn-primary">Registrar</button>
+            </div>
+        </form>
+        <div class="mt-5 m-0 col-md-12 row text-center">
+            <div class="col-md-6">
+                <table id="tablaMonturas" class="table table-striped table-hover">
+                    <thead> Monturas </thead>
+                    <tr>
+                        <td>Nombre</td>
+                        <td>Valor</td>
+                        <td>Tipo</td>
+                    </tr>
+                    </th>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <div class="col-md-6">
+                <table id="tablaMascotas" class="table table-striped table-hover">
+                    <thead> Mascotas </thead>
+                    <tr>
+                        <td>Nombre</td>
+                        <td>Valor</td>
+                        <td>Tipo</td>
+                    </tr>
+                    </th>
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
-        <div id="array">
+        <div class="col-md-12 text-center">
+            <table id="tablaServicio" class="table table-striped table-hover">
+                <thead> Servicios </thead>
+                <tr>
+                    <td>Nombre</td>
+                    <td>Valor</td>
+                    <td>Tipo</td>
+                </tr>
+                </th>
+                <tbody></tbody>
+            </table>
         </div>
+    </main>
     <script src="Index.js"></script>
 </body>
 </html>
