--- a/Index.html
+++ b/Index.html
@@ -8,73 +8,60 @@
     <title>Proyecto Javascript</title>
 </head>
 <body>
-    <main class="container mt-5 mb-5">
-        <h1 class="text-center">Registro de Productos</h1>
-        <form class="row g-3" id="formulario">
-            <div class="col-md-6">
-                <label for="inputNombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="inputNombre">
+    <main class="container mt-5">
+        <div>
+            <h1 class="text-center">Registro de Productos</h1>
+            <form class="row g-3" id="formulario">
+                <div class="col-md-6">
+                    <label for="inputNombre" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="inputNombre">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputValor" class="form-label">Valor</label>
+                    <input type="number" class="form-control" id="inputValor">
+                </div>
+                <div class="col-md-6 offset-md-3">
+                    <label for="inputTipo" class="form-label">Tipo</label>
+                    <select id="inputTipo" class="form-select">
+                        <option>
+                            Montura
+                        </option>
+                        <option>
+                            Mascota
+                        </option>
+                        <option>
+                            Servicio
+                        </option>
+                    </select>
+                </div>
+                <div class="col-12 text-center">
+                    <button id="botonAdmin" type="submit" class="btn btn-primary">Registrar</button>
+                </div>
             </div>
-            <div class="col-md-6">
-                <label for="inputValor" class="form-label">Valor</label>
-                <input type="number" class="form-control" id="inputValor">
-            </div>
-            <div class="col-md-6 offset-md-3">
-                <label for="inputTipo" class="form-label">Tipo</label>
-                <select id="inputTipo" class="form-select">
-                    <option>
-                        Montura
-                    </option>
-                    <option>
-                        Mascota
-                    </option>
-                    <option>
-                        Servicio
-                    </option>
-                </select>
-            </div>
-            <div class="col-12 text-center">
-                <button type="submit" class="btn btn-primary">Registrar</button>
-            </div>
-        </form>
-        <div class="mt-5 m-0 col-md-12 row text-center">
-            <div class="col-md-6">
-                <table id="tablaMonturas" class="table table-striped table-hover">
-                    <thead> Monturas </thead>
-                    <tr>
-                        <td>Nombre</td>
-                        <td>Valor</td>
-                        <td>Tipo</td>
-                    </tr>
-                    </th>
-                    <tbody></tbody>
-                </table>
-            </div>
-            <div class="col-md-6">
-                <table id="tablaMascotas" class="table table-striped table-hover">
-                    <thead> Mascotas </thead>
-                    <tr>
-                        <td>Nombre</td>
-                        <td>Valor</td>
-                        <td>Tipo</td>
-                    </tr>
-                    </th>
-                    <tbody></tbody>
-                </table>
-            </div>
+        </form> 
+        <div id="oferta" class="col-md-12 row">
         </div>
-        <div class="col-md-12 text-center">
-            <table id="tablaServicio" class="table table-striped table-hover">
-                <thead> Servicios </thead>
-                <tr>
-                    <td>Nombre</td>
-                    <td>Valor</td>
-                    <td>Tipo</td>
-                </tr>
-                </th>
+        <div class="col-md-12 text-center mt-3">
+            <h2>Servicios</h2>
+            <table id="" class="table table-striped table-hover">
+                <thead class="text-center">
+                    <tr>
+                        <td><b>Nombre</b></td>
+                        <td><b>Valor</b></td>
+                        <td><b>Tipo</b></td>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <table id="tablaCompra" class="table table-striped table-hover">
                 <tbody></tbody>
             </table>
         </div>
+        <div class="text-center">
+            <button id="limpiar" type="button" class="btn btn-primary">Limpiar Carrito</button>
+            <button id="terminarCompra" type="submit" class="btn btn-primary">Comprar</button>
+        </div>
+        <div id="total" class="text-center m-5 fs-3"></div>
     </main>
     <script src="Index.js"></script>
 </body>
