--- a/Index.html
+++ b/Index.html
@@ -40,6 +40,8 @@
                 </div>
             </div>
         </form> 
+        <div id="prueba" class="col-md-12 row">
+        </div>
         <div id="oferta" class="col-md-12 row">
         </div>
         <div class="col-md-12 text-center mt-3">
