--- a/Index.html
+++ b/Index.html
@@ -37,15 +37,13 @@
                 </div>
                 <div class="col-12 text-center">
                     <button id="botonAdmin" type="submit" class="btn btn-primary">Registrar</button>
+                    <h2 class="mt-3">Productos Disponibles</h2>
                 </div>
             </div>
         </form> 
-        <div id="prueba" class="col-md-12 row">
-        </div>
         <div id="oferta" class="col-md-12 row">
         </div>
         <div class="col-md-12 text-center mt-3">
-            <h2>Servicios</h2>
             <table id="" class="table table-striped table-hover">
                 <thead class="text-center">
                     <tr>
